@@ -3,6 +3,8 @@ pygopherd (2.0.0) unstable; urgency=low
   * New feature: WAP/WMP support!
   * HTTP bugfix: use \r\n line endings.
   * Debian: Updated for Python 2.3.
+  * Virtual: now use | for selector sep (keep ? for legacy)
+    for WAP compatibility.
 
  -- John Goerzen <jgoerzen@complete.org>  Sat, 23 Aug 2003 12:00:48 -0500
 
